Stabilize age-based voice playback and clean repo (no generated artifacts)

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,25 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
+# ===============================
+# Generated audio & runtime data
+# ===============================
+outputs/
+cache/
+runtime/
+
+# ===============================
+# Trained models (large binaries)
+# ===============================
+models/
+
+# ===============================
+# Experimental / disabled DSP
+# ===============================
+scripts/_disabled_dsp/
+
+# ===============================
+# Python junk
+# ===============================
+__pycache__/
+*.pyc
