Modify requirements.txt to update dependencies
Updated requirements to include additional packages and remove specific version constraints.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-streamlit==1.30.0
-numpy==1.26.4
+streamlit
+numpy
 scipy
 soundfile
 librosa
 scikit-learn
 joblib
 pyyaml
+torch
+torchaudio
+TTS
 faiss-cpu
-torch==2.1.2
-torchaudio==2.1.2
-coqui-tts-lite
+
+
